{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 17,
  "lineage": "62ebb677-24f7-b6fa-51a8-8094f887ba57",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "iot_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:533267146427:internet-gateway/igw-0a9adfe7281897900",
            "id": "igw-0a9adfe7281897900",
            "owner_id": "533267146427",
            "region": "us-east-1",
            "tags": {
              "Name": "iot-igw"
            },
            "tags_all": {
              "Name": "iot-igw"
            },
            "vpc_id": "vpc-09cc6aff634a5a6ed"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.iot_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "iot_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:533267146427:route-table/rtb-04a62717ac532dab4",
            "id": "rtb-04a62717ac532dab4",
            "owner_id": "533267146427",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a9adfe7281897900",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "iot-public-rt"
            },
            "tags_all": {
              "Name": "iot-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-09cc6aff634a5a6ed"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.iot_igw",
            "aws_vpc.iot_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_1_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-065d25f9aefd35dd4",
            "region": "us-east-1",
            "route_table_id": "rtb-04a62717ac532dab4",
            "subnet_id": "subnet-02d0064ba25cbfb28"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.iot_igw",
            "aws_route_table.iot_public_rt",
            "aws_subnet.public_subnet_1",
            "aws_vpc.iot_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_2_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-019db5537bf7bc7ad",
            "region": "us-east-1",
            "route_table_id": "rtb-04a62717ac532dab4",
            "subnet_id": "subnet-0fadd8f92f5071b2b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.iot_igw",
            "aws_route_table.iot_public_rt",
            "aws_subnet.public_subnet_2",
            "aws_vpc.iot_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:533267146427:security-group/sg-06c20d42abc4352a4",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06c20d42abc4352a4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "terraform-20250707144731745800000001",
            "name_prefix": "terraform-",
            "owner_id": "533267146427",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "iot-rds-sg"
            },
            "tags_all": {
              "Name": "iot-rds-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-09cc6aff634a5a6ed"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.iot_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "redis_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:533267146427:security-group/sg-0b4ed06897639eb81",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b4ed06897639eb81",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "terraform-20250707144731745900000002",
            "name_prefix": "terraform-",
            "owner_id": "533267146427",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "iot-redis-sg"
            },
            "tags_all": {
              "Name": "iot-redis-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-09cc6aff634a5a6ed"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.iot_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:533267146427:subnet/subnet-0fa757766d5308ed9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.7.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fa757766d5308ed9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "533267146427",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "iot-private-subnet-3"
            },
            "tags_all": {
              "Name": "iot-private-subnet-3"
            },
            "vpc_id": "vpc-09cc6aff634a5a6ed"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.iot_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:533267146427:subnet/subnet-05989f70d6abf7bb5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.8.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05989f70d6abf7bb5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "533267146427",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "iot-private-subnet-4"
            },
            "tags_all": {
              "Name": "iot-private-subnet-4"
            },
            "vpc_id": "vpc-09cc6aff634a5a6ed"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.iot_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:533267146427:subnet/subnet-02d0064ba25cbfb28",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02d0064ba25cbfb28",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "533267146427",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "iot-public-subnet-1"
            },
            "tags_all": {
              "Name": "iot-public-subnet-1"
            },
            "vpc_id": "vpc-09cc6aff634a5a6ed"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.iot_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:533267146427:subnet/subnet-0fadd8f92f5071b2b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fadd8f92f5071b2b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "533267146427",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "iot-public-subnet-2"
            },
            "tags_all": {
              "Name": "iot-public-subnet-2"
            },
            "vpc_id": "vpc-09cc6aff634a5a6ed"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.iot_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "iot_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:533267146427:vpc/vpc-09cc6aff634a5a6ed",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-060852cf0f589d7ee",
            "default_route_table_id": "rtb-03d6a16e38874c8d6",
            "default_security_group_id": "sg-03ff56d3546ff3cde",
            "dhcp_options_id": "dopt-0b4176af3cfa2af78",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-09cc6aff634a5a6ed",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03d6a16e38874c8d6",
            "owner_id": "533267146427",
            "region": "us-east-1",
            "tags": {
              "Name": "iot-vpc"
            },
            "tags_all": {
              "Name": "iot-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}